--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.6.0",
+    "auth0-lock": "^14.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
